# AmpliPi

./: .clang-format  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  AUTHORS  AUTHORS.update  CHANGELOG.md  CNAME  DEVELOPING.md  LICENSE  NEW_RELEASE.md  NOTES  README.md  TODO  TRADEMARKS.md  _config.yml  a2dp-agent  bt-agent-a2dp.service  conf.py  index.html  index.rst  install_bluetooth_for_amplipi.sh  pyproject.toml  requirements.txt  v1
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: cmake.yml  eslint.yml  python-app.yml
amplipi/: __init__.py  api.py  app.py  asgi.py  auth.py  ctrl.py  defaults.py  eeprom.py  eeprom_test.py  extras.py  formatter.py  hw.py  models.py  mpris.py  oled.py  oled_test.py  profile_volumes.py  rt.py  statcollector.py  streams.py  tasks.py  tests.py  tft_outline.py  tft_test.py  touch_test.py  utils.py  wsgi.py  xpt2046.py  zeroconf.py
amplipi/audiodetector/: .gitignore  Makefile  audiodetector.c  mcp3008.py
amplipi/display/: README.md  __init__.py  check_pass  common.py  display.py  display_old.py  eink.py  einkdisplay.py  epd2in13_V3.py  epdconfig.py  statusinterface.py  tftdisplay.py
amplipi/streams/: __init__.py  airplay.py  aux.py  base_streams.py  bluetooth.py  dlna.py  file_player.py  (+10 more)
amplipi_updater/: sse.py  wsgi.py
config/: 10-udisks.pkla  85-amplipi-usb-audio.rules  99-udisks2.rules  asound.conf  autoboot.txt  boot_config.txt  crontab  deactivate_persist_logs_crontab  delete_persisted_logs_crontab  dlna_metadata.bash  jasons_house.json  modules  modules.conf  runvlc.py  shairport_metadata.bash  shairport_start_all.bash  sound.conf  stat-collector-crontab  stat_collector_crontab  support_group_sudoers  support_tunnel_config.ini  support_tunnel_crontab  unit.json  update_config.bash  update_web.bash  use_ram.py  vlc.py  webserver.conf
debs/: README.md  generate_deps.bash  unit-python3.7-dbg_1.22.0-1~buster_armhf.deb  unit-python3.7_1.22.0-1~buster_armhf.deb  unit_1.22.0-1~buster_armhf.deb
doc/: amplipi_api.yaml  ethaudio_api.json  expansion_programming.md
docs/: BLUETOOTH.md  DEVELOPING.md  FCC.md  INSTALLATION.md  MAIN_CONTROLLER.md  MAIN_CONTROLLER_SPECS.md  MANUAL.md  OVERVIEW.md  PRESETS.md  QUICK_START.md  SAFETY.md  SETUP.md  SPEAKERS.md  TROUBLESHOOTING.md  VSCode_RemoteDev.md  WALL_PANEL.md  WEB_APP.md  ZONE_EXPANDER.md  ZONE_EXPANDER_SPECS.md  amplipi_api.yaml  conf.py  docker-compose.yaml  ethaudio_api.json  example_house.json  expansion_programming.md  imaging_etcher.md  index.rst  manual.aux  manual.fdb_latexmk  manual.fls  manual.tex  manual.toc  pi_imaging.md  plexamp_setup.md  preamp_dev.md  vscode_remote_dev.md
fw/: DEVELOPING.md  README.md  preamp_flash.sh  preamp_i2c_regs.md
fw/preamp/: .cproject  .project  CHANGELOG.md  CMakeLists.txt  GitVersion.cmake  LinkerScript.ld  README.md  arm-none-eabi-toolchain.cmake  generate_therm_tables.py  i2c_calcs.md  preamp.ld  preamp_bd.cfg  preamp_bd.xml  program_remote.bash  test_reset.bash
fw/preamp/CMSIS/device/: stm32f0xx.h
fw/preamp/StdPeriph_Driver/inc/: stm32f0xx_conf.h
fw/preamp/StdPeriph_Driver/src/: stm32f0xx_rcc.c
fw/preamp/inc/: main.h  stm32f0xx_it.h
fw/preamp/src/: adc.c  adc.h  audio.c  audio.h  audio_mux.c  audio_mux.h  channel.c  channel.h  ctrl_i2c.c  ctrl_i2c.h  eeprom.h  fans.c  fans.h  front_panel.c  front_panel.h  i2c.c  i2c.h  int_i2c.c  int_i2c.h  leds.c  leds.h  main.c  pins.c  pins.h  port_defs.c  port_defs.h  ports.c  ports.h  power_board.c  power_board.h  pwr_gpio.c  pwr_gpio.h  rcc.c  rcc.h  serial.c  serial.h  startup_stm32.s  system_stm32f0xx.c  systick.c  systick.h  (+5 more)
fw/preamp/startup/: startup_stm32.s
html/: index.html
hw/: BOARD_TESTS.md  README.md  TESTING.md  TESTING_EXPANDER.md  TESTING_STREAMER.md  checklists.tex  test_ap1_s4.tex  test_ap1_s4z6.tex  test_ap1_z6.tex
install_realtek_bt_driver/: 20201202_mpow_BH456A_driver+for+Linux.7z  RPI_INSTRUCTIONS.txt
python/: app.py  requirements.txt  run_mock_webserver.sh  run_server.py  run_webserver.sh  setup.py  sp_meta.py  webapp.py
scripts/: 10-udisks.pkla  99-udisks2.rules  backup_config.sh  bootstrap_pi  built_in_test  check-online  check-release  cleanup  collect_stats.sh  configure.py  create_spec  crontab  curl.py  delete_persisted_logs.sh  deploy  deploy_web_only  dlna_meta.py  edit_media_directories.py  eth_audio_server_mock.py  first_boot_partitioning  image_pi  image_shrink.bash  increment_auto_off.py  install_deps.bash  install_python_deps.bash  mount_pi.bash  peak_detect.py  program_firmware  read_version_master.py  reload_cmedia  reset_preamp_master.py  restart_lms_streams.sh  run_debug_frontend  run_debug_updater  run_debug_webserver  run_mock_webserver  run_webserver  set_address_master.py  set_boot0_exp1.py  set_boot0_master.py  (+16 more)
streams/: MPRIS_metadata_reader.py  bluetooth.py  bluetooth_agent  bluetooth_agent.py  bluetooth_agent_old_fixed  btagent.py  btout  dlna_meta.py  dlna_metadata.bash  eventcmd.sh  fileplayer.py  find_lms_server.c  fmradio.py  lms_meta.py  lms_metadata.py  mpd.conf  mprischildproc.py  pianobar  plexamp_nodeinstall.bash  process_monitor.py  runvlc.py  server.json  shairport-sync-ap2  shairport_metadata.bash  shairport_volume_handler.py  sp_meta.py  spot_config.toml  spot_connect_meta.py  spot_meta.py  spotify_metadata.bash  spotify_volume_handler.py  spotify_volume_manager.py  spotify_wrapper.bash  squeezelite  tidal.py  volume_synchronizer.py
tests/: README.md  UART_address.py  context.py  meta_test.bash  oled_test.py  peak_detect.py  preamp.py  set_preamp_address.py  simple_test.py  test_auth.py  test_ctrl.py  test_ethaudio.py  test_fans.py  test_fw.py  test_hardware.py  test_i2c.py  test_nrst_boot0.py  test_peak_detect.py  test_peak_fast.py  test_preamp.py  test_rest.py  test_streams.py  test_utils.py  test_zeroconf.py
util/: copy_python_to_board.sh  copy_webstuff_to_board.sh
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  readme.md  vite.config.js
web2/: index.html  jsconfig.json  package-lock.json  package.json  readme.md  vite.config.js
(+453 files in other folders)
