[tool.poetry]
name = "amplipi"
version = "0.1.0"
description = "A Pi-based whole house audio controller"
authors = [
  "Lincoln Lorenz <lincoln@micro-nova.com>",
  "Jeremy Bowers <jeremy@micro-nova.com>",
  "Mark Bowers <mark@micro-nova.com>",
  "Jason Gorski <jason@micro-nova.com>",
]
maintainers = ["Lincoln Lorenz <lincoln@micro-nova.com>"]
readme = "README.md"
homepage = "http://www.AmpliPi.com"
repository = "http://github.com/micro-nova/AmpliPi"
license = "GPL-3.0-or-later"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio :: Players",
]
include = [
  "*.md",
  "AUTHORS",
  "config/*.conf",
  "debs/**/*",
  "fw/preamp_*", # no need to add full source tree
  "scripts/run_debug_webserver", "scripts/install_deps.bash", "scripts/update_web.bash", # other scripts only support development
  "streams/**/*",
  "web/**/*",
]

[tool.poetry.scripts]
amplipi_install_deps = 'amplipi.scripts:install_deps'

[tool.poetry.urls]
"Issues" = "https://github.com/micro-nova/AmpliPi/issues"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
smbus2 = "^0.4.1"
pyserial = "^3.5"
deepdiff = "^5.2.3"
python-vlc = "^3.0.11115"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
