[tool.poetry]
name = "amplipi"
version = "0.1.7-beta.1"
description = "A Pi-based whole house audio controller"
authors = [
  "Lincoln Lorenz <lincoln@micro-nova.com>",
  "Michael Lohrer <michael@micro-nova.com>",
  "Jeremy Bowers <jeremy@micro-nova.com>",
  "Mark Bowers <mark@micro-nova.com>",
  "Jason Gorski <jason@micro-nova.com>",
]
maintainers = ["Lincoln Lorenz <lincoln@micro-nova.com>"]
readme = "README.md"
homepage = "http://www.AmpliPi.com"
repository = "http://github.com/micro-nova/AmpliPi"
license = "GPL-3.0-or-later"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio :: Players",
]
include = [
  "*.md",
  "requirements.txt",
  "AUTHORS",
  "config/*.conf",
  "config/*.rules",
  "debs/**/*",
  "fw/*.sh", # no need to add full source tree
  "fw/bin/*",
  "hw/**",
  "scripts/*",
  "streams/**/*",
  "web/**/*",
  "bin/**",
  "docs/**",
]
exclude = [
  "scripts/deploy", "scripts/bootstrap_pi" # only support development
]

[tool.poetry.scripts]
amplipi_install_deps = 'amplipi.scripts:configure'

[tool.poetry.urls]
"Issues" = "https://github.com/micro-nova/AmpliPi/issues"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
smbus2 = "^0.4.1"
pyserial = "^3.5"
deepdiff = "^5.2.3"
python-vlc = "^3.0.11115"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
